<resources>
    <string name="app_name">photils</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="api_tflite_error">Could not load the required library to execute the tag suggestion algorithm.</string>
    <string name="open_permission">Open Permissions</string>
    <string name="info_ok">Alrighty</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="menu_keywhat">Keywhat</string>
    <string name="menu_inspiration">Inspiration</string>
    <string name="main_action_info">About</string>

    <plurals name="keyhwat_selected_tags">
        <item quantity="one">%d tag selected</item>
        <item quantity="other">%d tags selected</item>
    </plurals>
    <plurals name="keyhwat_tags_found">
        <item quantity="one">Found %d tag</item>
        <item quantity="other">Found %d tags</item>
    </plurals>
    <string name="keywhat_action_custom_tags">About</string>
    <string name="keywhat_action_share">Share</string>
    <string name="keywhat_action_copy">Copy</string>
    <string name="keywhat_share">Get Hashtags</string>
    <string name="keywhat_confidence">Confidence</string>
    <string name="keywhat_current_confidence">%d%%</string>
    <string name="keywhat_copy_success">The hashtags has been copied to clipboard.</string>
    <string name="keywhat_error_title">Error</string>
    <string name="keywhat_error_message">An error occurred while executing the algorithm.\n\n%s</string>
    <string name="keywhat_error_btn_ok">That\'s a pity</string>
    <string name="keywhat_permission_explanation">
        <![CDATA[
        <h1>Permission Required</h1>
        <p>
            <i>Keywhat</i> requires permissions to read your local storage.
            Without this permission <i>Keywhat</i> is not able to open your image and without an image it is not possible to suggest keywords.
            Until the permission is denied this feature can not be used.
        </p>
        ]]>
    </string>
    <string name="inspiration_permission_explanation">
        <![CDATA[
        <h1>Permission Required</h1>
        <p>
            <i>Inspiration</i> requires permissions to read your local storage.
            Without this permission <i>Keywhat</i> is not able to open your image and without an image it is not possible to suggest keywords.
            Until the permission is denied this feature can not be used.
        </p>
        ]]>
    </string>

    <string name="info_keywhat">
        <![CDATA[
        <h1>Keywhat</h1>
        <p>
            Take a picture and let <i>Keywhat</i> suggest many hashtags for your image.
            For every image a neural network is used to classify your image and find meaningful keywords.
        </p>
        <p>
            <b><i>
                It should be noted that everything is processed on your mobile device.
                No images, no data related to this request leave your phone!
            </i></b>
        </p>

        <p>
            After processing your selected image you are able to select multiple hashtags from a list of suggestions.
            If you select at least one hashtag you have the opportunity to share your image with the selected tags.
            If an external app like WhatsApp support it, the selected tags will be used as image description.
            Unfortunately there exists no function like this for <b>Instagram</b>.
            Because of this, after you share the image with Instagram, the selected hashtags are copied to your clipboard.
            At the point when Instagram ask you for the image description you are able to paste the selected keywords from your clipboard.
        </p>

        <p>
            Photils is free and Open Source, you can check the source code or contribute.
            Have a look at <a href="https://photils.app">https://photils.app</a> for further information.
        </p>
        ]]>
    </string>
    <string name="title_activity_custom_tags">Custom Tags</string>
    <string name="custom_tags_no_item_message">There are no custom tags yet.</string>
    <string name="custom_tags_dialog_group">Add/Select group name for tags e.g. Landscape</string>
    <string name="custom_tags_dialog_tag">Tag (without #, separated by space for multiple)</string>
    <string name="custom_tags_dialog_default">Selected by Default</string>
    <string name="custom_tags_dialog_add_error_title">Tag already exists</string>
    <string name="custom_tags_dialog_add_error_message">The following tags already exists:\n%1$s</string>
    <string name="custom_tags_dialog_error_tag_group">Custom Tag: <i>%1$s</i> in Group: <i>%2$s</i></string>
    <string name="custom_tags_delete_title">Delete Tags?</string>
    <string name="custom_tags_delete_message">Are you sure you want to delete %1$d tags?</string>
    <string name="nav_share_app">Recommend photils</string>
    <string name="share_app_title">Check out photils</string>
    <string name="share_app_message">Have you ever tried photils? Photils is an app that generates hashtags, using machine learning, for your selected images. Try it: https://play.google.com/store/apps/details?id=app.photils</string>
    <string name="nav_buy_me_beer">Buy me a Beer!</string>
    <string name="nav_further_info">Further Information</string>
</resources>
